// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCard horizontal 1`] = `
<div
  class="euiCard euiCard--centerAligned euiCard--horizontal"
>
  <span
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--medium euiCard__title"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
    >
      <p>
        Card description
      </p>
    </div>
  </span>
</div>
`;

exports[`EuiCard icon 1`] = `
<div
  class="euiCard euiCard--centerAligned euiCard--hasIcon"
>
  <span
    class="euiCard__top"
  >
    <svg
      class="euiIcon euiIcon--medium euiIcon--app myIconClass euiCard__icon"
      focusable="false"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="euiIcon__fillSecondary"
        d="M0 3h24v2H0z"
      />
      <path
        d="M4 11h24v2H4zM4 19h15v2H4z"
      />
      <path
        class="euiIcon__fillSecondary"
        d="M19 27h13v2H19z"
      />
    </svg>
  </span>
  <span
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--medium euiCard__title"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
    >
      <p>
        Card description
      </p>
    </div>
  </span>
  <span
    class="euiCard__footer"
  />
</div>
`;

exports[`EuiCard is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiCard euiCard--centerAligned testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--medium euiCard__title"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
    >
      <p>
        Card description
      </p>
    </div>
  </span>
  <span
    class="euiCard__footer"
  />
</div>
`;
